--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,7 +19,10 @@
 .App {
   text-align: center;
   display: grid;
-  grid-template-columns: 33% 33% 33%;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 33.3% 33.3% 33.3%;
+  min-width: 1024px;
 }
 
 body {
@@ -47,12 +50,45 @@ body::before {
 
 .eventImg {
   grid-area: 1 / 1 / 2 / 2;
+  /* margin-left: auto; */
+  margin-right: 2rem;
+}
+
+#image {
+  width: 45rem;
+  height: 45rem;
+  margin-top: 15rem;
+}
+
+.shop-container {
+  /* background-color: aliceblue; */
+  grid-area: 1 / 3 / 2 / 4;
+  margin-top: 15rem;
+}
+
+.cube {
+  width: 20rem;
+  height: 20rem;
+}
+
+Button {
   margin-left: auto;
   margin-right: auto;
 }
 
-#image {
-  width: 50rem;
-  height: 50rem;
-  margin-top: 30rem;
+Button:hover {
+  cursor: url("../public/cursors/point_mouse.cur"), auto;
+}
+
+.info {
+  background-color: rgba(0, 0, 0, 50%);
+  border: solid white 2px;
+  font-size: 3rem;
+  margin-top: 3rem;
+  color: white;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
