--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -2,7 +2,7 @@
     grid-area: 1 / 2 / 2 / 3;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 15rem;
+    margin-top: 5rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
     background-color: #483b32;
@@ -30,7 +30,7 @@ img {
     margin-right: auto;
     margin-top: 2rem;
     background-color: #6e6f73;
-    font-size: 3rem;
+    font-size: 2rem;
     width: 45rem;
     color: white;
 }
@@ -39,7 +39,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-top: 1rem;
-    font-size: 3rem;
+    font-size: 2rem;
     width: 45rem;
     color: white;
 }
@@ -49,9 +49,14 @@ img {
     margin-right: auto;
     margin-top: 2rem;
     background-color: #6e6f73;
-    font-size: 3rem;
+    font-size: 2rem;
     width: 45rem;
+    height: 15rem;
     color: white;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.attribute {
+    margin-top: 2rem;
 }
