--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -6,6 +6,7 @@
     padding-top: 5rem;
     padding-bottom: 5rem;
     background-color: #483b32;
+    opacity: 0.95;
     width: 50rem;
     height: 75rem;
 }
