--- a/src/App.module.css
+++ b/src/App.module.css
@@ -42,7 +42,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../public/images/background.jpeg");
+  background-image: url("../public/images/black_heaven.jpg");
   background-size: cover;
   background-position: center;
   z-index: -1;
